<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="blod"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDE4E8"
    android:visibility="visible"
    tools:context=".RegisterActivity"
    tools:visibility="visible">

    <TextView
        android:id="@+id/tVRegister"
        android:layout_width="146dp"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColor="@color/Black"
        tools:textStyle="bold" />

    <EditText
        android:id="@+id/inputUserName"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_line"
        android:backgroundTint="@color/White"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="8sp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingLeft="10sp"
        android:textColor="@color/Black"
        app:layout_constraintEnd_toEndOf="@+id/inputLastName"
        app:layout_constraintStart_toStartOf="@+id/inputLastName"
        app:layout_constraintTop_toBottomOf="@+id/inputLastName" />

    <EditText
        android:id="@+id/inputPasswordRegister"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_line"
        android:backgroundTint="@color/White"
        android:drawableLeft="@drawable/ic_security"
        android:drawableRight="@drawable/ic_visibility_off"
        android:drawablePadding="8sp"
        android:ems="10"
        android:hint="@string/password"
        android:paddingLeft="10sp"
        android:paddingEnd="10sp"
        android:textColor="@color/Black"
        app:layout_constraintEnd_toEndOf="@+id/inputEmailRegister"
        app:layout_constraintStart_toStartOf="@+id/inputEmailRegister"
        app:layout_constraintTop_toBottomOf="@+id/inputEmailRegister" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="173dp"
        android:layout_height="43dp"
        android:gravity="center"
        android:text="@string/have_an_account_login"
        android:textColor="@color/Black"
        android:textStyle="bold"
        android:onClick="Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintVertical_bias="0.23000002" />

    <EditText
        android:id="@+id/inputReEnterPassword"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_line"
        android:backgroundTint="@color/White"
        android:drawableLeft="@drawable/ic_security"
        android:drawableRight="@drawable/ic_visibility_off"
        android:drawablePadding="8sp"
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:textColor="@color/Black"
        app:layout_constraintEnd_toEndOf="@+id/inputPasswordRegister"
        app:layout_constraintStart_toStartOf="@+id/inputPasswordRegister"
        app:layout_constraintTop_toBottomOf="@+id/inputPasswordRegister" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/border_line"
        android:backgroundTint="@color/White"
        android:text="@string/register"
        android:textColor="@color/Black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputReEnterPassword" />

    <EditText
        android:id="@+id/inputEmailRegister"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_line"
        android:backgroundTint="@color/White"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="8sp"
        android:ems="10"
        android:hint="@string/email"
        android:paddingLeft="10sp"
        android:textColor="@color/Black"
        app:layout_constraintEnd_toEndOf="@+id/inputUserName"
        app:layout_constraintStart_toStartOf="@+id/inputUserName"
        app:layout_constraintTop_toBottomOf="@+id/inputUserName" />

    <TextView
        android:id="@+id/tVRegisterWelcoming"
        android:layout_width="229dp"
        android:layout_height="43dp"
        android:layout_marginTop="4dp"
        android:autoSizeMinTextSize="30sp"
        android:gravity="center"
        android:text="@string/welcome_to_garage_sale"
        android:textColor="@color/Black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVRegister" />

    <EditText
        android:id="@+id/inputFirstName"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/border_line"
        android:backgroundTint="@color/White"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:paddingLeft="15sp"
        android:textColor="@color/Black"
        app:layout_constraintEnd_toEndOf="@+id/tVRegisterWelcoming"
        app:layout_constraintStart_toStartOf="@+id/tVRegisterWelcoming"
        app:layout_constraintTop_toBottomOf="@+id/tVRegisterWelcoming" />

    <EditText
        android:id="@+id/inputLastName"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_line"
        android:backgroundTint="@color/White"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:paddingLeft="15sp"
        android:textColor="@color/Black"
        app:layout_constraintEnd_toEndOf="@+id/inputFirstName"
        app:layout_constraintStart_toStartOf="@+id/inputFirstName"
        app:layout_constraintTop_toBottomOf="@+id/inputFirstName" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/inputPasswordRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputPasswordRegister"
        app:layout_constraintTop_toTopOf="@+id/inputPasswordRegister"
        app:srcCompat="@drawable/ic_info" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/inputReEnterPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputReEnterPassword"
        app:layout_constraintTop_toTopOf="@+id/inputReEnterPassword"
        app:srcCompat="@drawable/ic_info" />

</androidx.constraintlayout.widget.ConstraintLayout>